# paranoixa

./: .gitignore  .gitmodules  CMakeLists.txt  LISENCE.md  README.md  webgpu.cmake
.github/workflows/: CI.yml  emscripten.yml
env/vscode/: paranoixa.code-workspace
include/: paranoixa.hpp
include/paranoixa/: allocator.hpp  define.hpp  paranoixa.hpp  ref.hpp  renderer.hpp
include/paranoixa/allocator/: allocator.hpp  tlsf_allocator.hpp
include/paranoixa/math/: math.hpp  matrix3.hpp  matrix4.hpp  periodic.hpp  point2.hpp  point3.hpp  quaternion.hpp  random.hpp  rect.hpp  vector2.hpp  vector3.hpp
include/paranoixa/memory/: control_block.hpp  ptr.hpp
include/paranoixa/renderer/: renderer.hpp
include/paranoixa/time/: time.hpp  timer.hpp
source/: paranoixa.cpp
source/allocator/: tlsf_allocator.cpp
source/imgui_backend/: CMakeLists.txt  imgui_impl_paranoixa.cpp  imgui_impl_paranoixa.hpp
source/paranoixa/: paranoixa.cpp  tlsf_allocator.cpp
source/paranoixa/allocator/: std_allocator.cpp  std_allocator.hpp  tlsf_allocator.cpp  tlsf_allocator.hpp
source/paranoixa/d3d12u/: d3d12u_renderer.cpp  d3d12u_renderer.hpp
source/paranoixa/math/: math.cpp  periodic.cpp  random.cpp  random_generator.hpp
source/paranoixa/memory/: tlsf_allocator.cpp
source/paranoixa/renderer/d3d12u/: d3d12u_renderer.cpp  d3d12u_renderer.hpp
source/paranoixa/renderer/sdlgpu/: sdlgpu_renderer.cpp  sdlgpu_renderer.hpp
source/paranoixa/renderer/vulkan/: vma.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
source/paranoixa/renderer/webgpu/: webgpu_renderer.hpp
source/paranoixa/sdlgpu/: sdlgpu_backend.cpp  sdlgpu_backend.hpp  sdlgpu_convert.cpp  sdlgpu_convert.hpp  sdlgpu_renderer.cpp  sdlgpu_renderer.hpp
source/paranoixa/vulkan/: vma.cpp  vma.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
source/paranoixa/webgpu/: webgpu_renderer.cpp  webgpu_renderer.hpp
source/phonon/: CMakeLists.txt  main.cpp
source/renderer/: renderer.hpp
source/renderer/d3d12u/: d3d12u_renderer.cpp  d3d12u_renderer.hpp
source/renderer/vulkan/: vma.cpp  vma.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
source/renderer/webgpu/: webgpu_renderer.cpp  webgpu_renderer.hpp
source/time/: time.cpp  timer.cpp
src/: paranoixa.cpp
src/renderer/: renderer.hpp
src/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp
src/renderer/webgpu/: webgpu_renderer.cpp  webgpu_renderer.hpp
test/: CMakeLists.txt  imgui.ini  make_symbolic_link.py  test.cpp
test/res/: compileShader.py  run.bat  shader.frag  shader.frag.cso  shader.frag.glsl  shader.frag.spv  shader.frag.wgsl  shader.vert  shader.vert.glsl  shader.vert.hlsl  shader.vert.spv  shader.vert.wgsl
